--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
   <h1>Hello, world!</h1>
-  <p>This is a basic HTML page i have created.</p>
+  <p>This is a basic HTML page.</p>
 </body>
 </html>
